packages/mantine/src/blocknoteStyles.css
/* ... */
.bn-mantine
  .bn-badge
  .mantine-Chip-label
  > span:not(.mantine-Chip-iconWrapper)
  > span {
  align-items: center;
  display: inline-flex;
  justify-content: center;
}

/* Combobox styling */
.bn-mantine .bn-combobox-input,
.bn-mantine .bn-combobox-items:not(:empty) {
  background-color: var(--bn-colors-menu-background);
  border: var(--bn-border);
  border-radius: var(--bn-border-radius-medium);
  box-shadow: var(--bn-shadow-medium);
  color: var(--bn-colors-menu-text);
  gap: 4px;
  min-width: 145px;
  padding: 2px;
}

.bn-mantine .bn-combobox-input .bn-combobox-icon,
.bn-mantine .bn-combobox-input .bn-combobox-right-section {
  align-items: center;
  display: flex;
  justify-content: center;
}

.bn-mantine .bn-combobox-input .bn-combobox-error {
  color: var(--bn-colors-highlights-red-background);
}

/* We need to get rid of the checked icon - you can set the icon prop to an
empty element (<></>), but even so Mantine leaves extra space for the icon, so
we just don't display it in CSS instead. */
.bn-mantine .bn-badge .mantine-Chip-iconWrapper {
  display: none;
}

